Add Dequeue, ArrayProcessor,Queue

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs/Consol/v15
+/Consol/x64/Debug
+/x64/Debug
+/Consol/resource.h
+/Consol/Consol.aps
+/Consol/Consol.rc
