--- a/Consol/Consol.vcxproj
+++ b/Consol/Consol.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="ArrayProcessor.h" />
     <ClInclude Include="Dequeue.h" />
+    <ClInclude Include="Dlist.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="resource.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="ArrayProcessor.cpp" />
     <ClCompile Include="Consol.cpp" />
     <ClCompile Include="Dequeue.cpp" />
+    <ClCompile Include="Dlist.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="Queue.cpp" />
     <ClCompile Include="Stack.cpp" />
@@ -170,9 +172,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Consol.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
